# ocv

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
src/: camera.cc  toGrayScale.cc
